# slonikai

./: #mod#  #mod2#  .#mod2  .cproject  .gitignore  .project  CMakeLists.txt  README.md  bb.cpp  bb.h  build.sh  constants.h  core  eval.h  features.cpp  features.h  magics.cpp  magics.h  main  main.cpp  material.cpp  material.h  mcts.cpp  mcts.h  mod  mod2  movecalc.cpp  movecalc.h  movegen.cpp  movegen.h  nn.cpp  nn.h  position.cpp  position.h  profile.sh  search.cpp  search.h  sts.cpp  sts.h  td.cpp  (+10 more)
Debug/: clonik  main.d  makefile  material.d  movegen.d  subdir.mk
Release/: bb.d  clonik  magics.d  movecalc.d  position.d  search.d  subdir.mk  template.d  zobrist.d
package/mxnet-cpp/: op.h
